assets/scss/3-modules/_global-nav.scss
.global-nav {
  background-color: $primary-red;
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  min-width: 100%;
  padding-bottom: 10px;
  padding-left: 5%;
  padding-top: 15px;
  width: 100%;
  height: 56px;
  position: fixed;
  z-index: 1040;
}

@media screen and (min-width: 992px) {
  .global-nav {
    background-color: transparent !important;
    padding-top: 28px;
  }
}

.kcc-logo {
  width: 340px;
}

.form-inline {
  float: right;
}

.local-search {
  border-radius: 1.5em;
}

.search {
  font-size: 1.2em;
  margin-right: 40%;
}

.clearSearch {
  padding-top: 72px;
  background-position: center 72px;
}

.search-row {
  background-color: green;
  height: 46px;
}

